// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`IssueListActions Bulk Total results greater than bulk limit after checking "Select all" checkbox, displays bulk select message 1`] = `
<div
  class="css-1yhs0ms-SelectAllNotice eucbk0f1"
  data-test-id="issue-list-select-all-notice"
>
  3 issues on this page selected.
  <a
    class="css-pw0hc6-SelectAllLink eucbk0f0"
    data-test-id="issue-list-select-all-notice-link"
  >
    <span>
      <span>
        Select the first 
      </span>
      <span>
        1,000
      </span>
      <span>
         issues that match this search query.
      </span>
    </span>
  </a>
</div>
`;

exports[`IssueListActions Bulk Total results greater than bulk limit can bulk select 1`] = `
<div
  class="css-1yhs0ms-SelectAllNotice eucbk0f1"
  data-test-id="issue-list-select-all-notice"
>
  <span>
    <span>
      Selected up to the first 
    </span>
    <span>
      1,000
    </span>
    <span>
       issues that match this search query.
    </span>
  </span>
</div>
`;

exports[`IssueListActions Bulk Total results less than bulk limit after checking "Select all" checkbox, displays bulk select message 1`] = `
<div
  class="css-1yhs0ms-SelectAllNotice eucbk0f1"
  data-test-id="issue-list-select-all-notice"
>
  3 issues on this page selected.
  <a
    class="css-pw0hc6-SelectAllLink eucbk0f0"
    data-test-id="issue-list-select-all-notice-link"
  >
    <span>
      <span>
        Select all 
      </span>
      <span>
        15
      </span>
      <span>
         issues that match this search query.
      </span>
    </span>
  </a>
</div>
`;

exports[`IssueListActions Bulk Total results less than bulk limit bulk resolves 1`] = `
<div
  aria-modal="true"
  class="css-1138fj1-Modal e18w5nin1"
  role="dialog"
  style="opacity: 0; transform: translateY(-10px) translateZ(0);"
>
  <div
    class="css-2rzyug-Content e18w5nin0"
    role="document"
  >
    <section
      class="css-c7spxd-ModalBody e1tvea4i1"
    >
      <div>
        <p
          style="margin-bottom: 20px;"
        >
          <strong>
            <span>
              <span>
                Are you sure you want to 
              </span>
              <span>
                resolve
              </span>
              <span>
                 all 
              </span>
              <span>
                15
              </span>
              <span>
                 issues that match the search?
              </span>
            </span>
          </strong>
        </p>
        <p
          class="error"
        >
          <strong>
            <span>
              <span>
                This will apply to all 
              </span>
              <span>
                15
              </span>
              <span>
                 issues matched in this project!
              </span>
            </span>
          </strong>
        </p>
      </div>
    </section>
    <footer
      class="css-wlvhrh-ModalFooter e1tvea4i0"
    >
      <div
        class="css-1vekqnz-ButtonGrid e1n9g4yq0"
      >
        <button
          aria-disabled="false"
          aria-label="Cancel"
          class="css-19177tu-StyledButton-getColors-getButtonStyles e1b8u3ky2"
          role="button"
          type="button"
        >
          <span
            class="css-vul34l-InteractionStateLayer-InteractionStateLayer-InteractionStateLayer e1fwp9rx0"
            role="presentation"
          />
          <span
            class="css-1z0n9wg-ButtonLabel e1b8u3ky1"
          >
            Cancel
          </span>
        </button>
        <button
          aria-disabled="false"
          aria-label="Bulk resolve issues"
          class="css-zbzvlb-StyledButton-getColors-getButtonStyles e1b8u3ky2"
          data-test-id="confirm-button"
          role="button"
          type="button"
        >
          <span
            class="css-at526y-InteractionStateLayer-InteractionStateLayer-InteractionStateLayer e1fwp9rx0"
            role="presentation"
          />
          <span
            class="css-1z0n9wg-ButtonLabel e1b8u3ky1"
          >
            Bulk resolve issues
          </span>
        </button>
      </div>
    </footer>
  </div>
</div>
`;

exports[`IssueListActions Bulk Total results less than bulk limit can bulk select 1`] = `
<div
  class="css-1yhs0ms-SelectAllNotice eucbk0f1"
  data-test-id="issue-list-select-all-notice"
>
  <span>
    <span>
      Selected all 
    </span>
    <span>
      15
    </span>
    <span>
       issues that match this search query.
    </span>
  </span>
</div>
`;
